<resources>
    <string name="app_name">My movie App</string>
    <string name="url_without_key_most_popular" translatable="false">http://api.themoviedb.org/3/movie/popular?</string>
    <string name="url_without_key_highest_rated" translatable="false">https://api.themoviedb.org/3/movie/top_rated?</string>
    <string name="your_key_movie_DB" translatable="false">ENTER YOUR KEY HERE</string>
    <string name="image_base_address" translatable="false">https://image.tmdb.org/t/p/w780</string>
    <string name="title_activity_detail" translatable="false">Movie Detail</string>
    <string name="sort_desc_address" translatable="false">http://api.themoviedb.org/3/discover/movie?sort_by=vote_average.desc</string>
    <string name="videos_url" translatable="false">/movie/{id}/videos</string>
    <string name="review_url" translatable="false">https://api.themoviedb.org/3/movie/</string>
    <string name="get_movie_details_url" translatable="false">https://api.themoviedb.org/3/movie/</string>
    <string name="loading">Loading....</string>
    <string name="get_movie_from_youtobe" translatable="false">https://www.youtube.com/watch?v=</string>
    //Settings Info
    <string name="preference_sort_by_rating_label">Sort by rating</string>
    <string name="preference_sort_by_rating_key" translatable="false">sort_rating</string>
    <string name="preference_sort_by_rating_default">true</string>
    <string name="preference_sort_by_popularity_label">Sort by Popularity</string>
    <string name="preference_sort_by_popularity_key" translatable="false">sort_popularity</string>
    <string name="preference_sort_by_popularity_default">false</string>
    <string name="settings_menu_item">Menu</string>
    <string name="detail_activity">Movie Details</string>
    <string name="settings_activity">Settings</string>
    <string name="ave_rating_label">Average Rating</string>
    <string name="plot">Plot</string>
    <string name="list_favorite_movies">List of Favorite Movies</string>
    <string name="title_activity_show_favorite_list">ShowFavoriteList</string>
    <string name="my_favorites_list">My favorites List</string>
    <string name="Favorite">Set As Favorite</string>
    <string name="isNotFavorite">Delete from Fab List</string>
    <string name="Reviews">Reviews</string>
    <string name="by">Review by:</string>
    <string name="release_date_label">Release Date</string>
    <string name="Videos"><![CDATA[Videos & Trailers]]></string>
    <string name="Adding">Adding</string>
    <string name="to_fav_list">to your Fav List</string>
    <string name="there_are_no_videos">There are no videos for this movie</string>
    <string name="are_there_no_reviews">There are no reviews for this movie</string>

</resources>
