<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_detail_movie_poster"
                style="@style/movie_poster"
                android:layout_width="@dimen/picture_w_detail"
                android:layout_height="@dimen/picture_h_detail"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/tv_movie_detail_tittle"
                style="@style/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/detail_but_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="@dimen/three_dp"
                    android:text="@string/Favorite" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rating_label"
                        style="@style/label_rating"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ave_rating_label" />

                    <TextView
                        android:id="@+id/tv_detail_user_rating"
                        style="@style/rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/loading" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/label_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plot" />

            <TextView
                android:id="@+id/tv_detail_plot_synop"
                style="@style/label_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date_label" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading" />

            <TextView
                style="@style/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/fab_margin"
                android:text="@string/Videos" />
            <TextView
                android:id="@+id/are_there_videos"
                android:textAlignment="center"
                android:text="@string/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_of_videos"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

            <TextView
                style="@style/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/fab_margin"
                android:text="@string/Reviews" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/are_there_reviews_tv"
                    android:textAlignment="center"
                    android:text="@string/loading"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_of_reviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </ScrollView>
</LinearLayout>